WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258015
Resolution context for `::backdrop` must not use element's style as parent style
https://bugs.webkit.org/show_bug.cgi?id=258015
Summary
Resolution context for `::backdrop` must not use element's style as parent style
Vitaly Dyackhov
Reported
2023-06-13 04:42:01 PDT
Until a very recent "Fullscreen API" spec update [1], `::backdrop` pseudo-element was not supposed to inherit from any element, including its owner element. But because some style-related functions expect that the parent style is never `nullptr` we use render view style as a parent style [2]. Since it's expected behavior for now across the codebase and the tests were not updated yet, we should use the same approach when creating `ResultionContext` for `::backdrop` pseudo-element. [1]
https://github.com/whatwg/fullscreen/commit/666438755d2f252be1d1f73d8214ac494489d32c
[2]
https://github.com/WebKit/WebKit/blob/b872c8723cdbb67aafa46776c2e05066fd4ebbe2/Source/WebCore/rendering/updating/RenderTreeUpdaterGeneratedContent.cpp#L203C6-L204
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2023-06-13 04:52:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14915
EWS
Comment 2
2023-06-19 01:44:01 PDT
Committed
265300@main
(e8f5190a3e2d): <
https://commits.webkit.org/265300@main
> Reviewed commits have been landed. Closing PR #14915 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-19 01:45:17 PDT
<
rdar://problem/110992224
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug