Resolution context for `::backdrop` must not use element's style as parent style https://bugs.webkit.org/show_bug.cgi?id=258015

Reviewed by Antti Koivisto.

Until a very recent "Fullscreen API" spec update [1], `::backdrop`
pseudo-element was not supposed to inherit from any element, including
its owner element.

But because some style-related functions expect that the parent style is
never `nullptr` we use render view style as the parent style [2].

Since it's expected behavior for now across the codebase and the tests
were not updated yet, we should use the same approach when creating
`ResultionContext` for `::backdrop` pseudo-element.

[1] https://github.com/whatwg/fullscreen/commit/666438755d2f252be1d1f73d8214ac494489d32c
[2] https://github.com/WebKit/WebKit/blob/b872c8723cdbb67aafa46776c2e05066fd4ebbe2/Source/WebCore/rendering/updating/RenderTreeUpdaterGeneratedContent.cpp#L203C6-L204

* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::makeResolutionContextForPseudoElement):

Canonical link: https://commits.webkit.org/265300@main